added new endpoints to openapi + generated sources
